# frootful-sales-aggregation

./: .env  .gitignore  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  _redirects  app.json  build-extension.js  check-function-owner.sql  check-phone-storage.sql  debug-functions.sql  index.html  manifest.json  mockup-la-gaitana-po.html  netlify.toml  package-lock.json  package.json  test-db-functions.sql  test-process-intake-event.sh  verify-auth-users-view.sql  vite.config.ts  vite.config.ts.timestamp-1757803428911-4474c8037e5d28.mjs
al-extension/: README.md  app.json
background/: background.ts
browser-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  chat_server.py  copilotkit_server.py  deterministic_enter_agent.py  download_reference_data.py  enter_order.py  fly.toml  login.py  orchestrator.py  order_extraction_agent.py  order_extraction_agent_v2.py  pyproject.toml  webflor_agent_sdk.py  webflor_agent_sdk_v2.py  webflor_auth.py  webflor_mcp_server.py
browser-agent/docs/: orchestrator-status.md  order-313773-analysis.md  order-313773-full-reconstruction.md  spec-sheets-analysis.md
browser-agent/templates/: order_output.md  order_output_v2.md
chat-app/: Dockerfile  chainlit.md  chainlit_app.py  pyproject.toml  webflor_auth.py
chat-app/.chainlit/: config.toml
chat-app/.chainlit/translations/: en-US.json
chat-app/public/: hide-header.js  theme.css
cli-utils/: .env.example  order_agent.py  requirements.txt  sheets_agent.py  test_connection.py
content/: content.css  content.ts  contentRelay.js
docs/: DEMO_SETUP.md  la-gaitana-farms.md
(+240 files in other folders)
